<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="65dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
            >

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/icon_user_logged_in"
                tools:ignore="ImageContrastCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/string_username"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_my_data"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_arrow_go"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/string_my_orders"
                    android:textSize="20sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_arrow_go"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/string_my_shopping"
                    android:textSize="20sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_arrow_go"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_about_the_company"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_info"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"
        android:contentDescription="@string/button_log_out"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="5dp"
        app:srcCompat="@drawable/icon_log_out"
        app:tint="@color/black"
        tools:ignore="ImageContrastCheck" />
</com.google.android.material.card.MaterialCardView>